blue/example-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-bemily-file
  labels:
    node_tag: file
    color: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      node_tag: file
      color: blue
  template:
    metadata:
      labels:
        node_tag: file
        color: blue
    spec:
      containers:
        - name: prod-bemily-file
          image: 193033533370.dkr.ecr.ap-northeast-2.amazonaws.com/bemily/bemily-file-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 38080
          resources:
            requests:
              memory: "2300Mi"
              cpu: "500m"
            limits:
              memory: "2500Mi"
              cpu: "700m"
      nodeSelector:
        node_tag: file
